--- a/estilo.css
+++ b/estilo.css
@@ -14,9 +14,11 @@ header{
     margin-top: 00px;
     color:white;
     text-align: center;
+    border-radius: 40px;
 }
 img{
     max-height: 300px;
+    border-radius: 40px;
 }
 
 a{
@@ -25,7 +27,7 @@ a{
 }
 .conteudo-padrao {
     text-align:inherit;
-    display: inline-block;
+    display: block;
     width: 48%;
     border: 3px solid black;
    padding-top: 20px;
@@ -33,6 +35,12 @@ a{
    border-radius: 15px;
    height: 30px;
    line-height: 20px;
+   margin: auto;
+   margin-bottom: 10px;
+   min-height: 600px;
+   background-color: #301860;
+   color: white;
+   box-shadow: 5px 5px 10px blueviolet;
 }
 footer{
     background-color: #301860;
